--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@byte-this/html-metadata-reader",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Read all meta tags and their values from an HTML document without the use of the window object",
     "main": "public-api.js",
     "types": "public-api.d.ts",
+    "type": "module",
     "scripts": {
         "test": "jest",
         "test:coverage": "jest --coverage && jest-coverage-badges",
